[package]
name = "raven-traces"
version = "0.1.0"
authors = [
    "Valerii kantor <valery.kantor@gmail.com>"
]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"

#[lints]
#workspace = true

[dependencies]
common = { path = "lib/common" }
storage = { path = "lib/storage" }
wal = { path = "lib/wal"}

actix-web = "4.13.0"
actix-web-prom = "0.10.0"
flexi_logger = "0.31"
log = "0.4.29"
colored = "3.1.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
env_logger = "0.11.10"
validator = "0.20.0"

[workspace]
members = [
    "lib/common",
    "lib/storage",
    "lib/wal",
]
