[package]
name = "raven-traces"
version = "0.1.0"
authors = [
    "Valerii kantor <valery.kantor@gmail.com>"
]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"

#[lints]
#workspace = true

[dependencies]
common = { path = "lib/common" }
storage = { path = "lib/storage" }
wal = { path = "lib/wal"}
metrics = {path = "lib/metrics"}

actix-web = "4.13.0"
actix-web-prom = "0.10.0"
prometheus = "0.14.0"
lazy_static = "1.5.0"
flexi_logger = "0.31"
log = "0.4.29"
colored = "3.1.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
env_logger = "0.11.10"
validator = "0.20.0"
prost = "0.14.3"
opentelemetry-proto = "0.31.0"
clap = { version = "4.6.1", features = ["derive"] }

# Jemalloc
[target.'cfg(all(not(target_env = "msvc"), any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { version = "0.6.1", features = [
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
] }
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }

[workspace]
members = [
    "lib/common", "lib/metrics",
    "lib/storage",
    "lib/wal",
]

[profile.release]
debug = true
strip = false