[package]
name = "storage"
version = "0.1.0"
authors = [
    "Valerii kantor <valery.kantor@gmail.com>"
]
edition = "2024"
license = "Apache-2.0"

[features]
testing = []

[dev-dependencies]
tempfile.workspace = true

[dependencies]
common = { path = "../common" }
wal = { path = "../wal"}
metrics = {path = "../metrics"}

indexmap = "2.13.0"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
murmur3.workspace = true
rand.workspace = true
ulid.workspace = true
