[package]
name = "wal"
version = "0.1.0"
authors = [
    "Valerii kantor <valery.kantor@gmail.com>"
]
edition = "2024"
license = "Apache-2.0"

[dev-dependencies]
tempfile.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
crc32fast.workspace = true

